== 2.9.2 ==
Release date: 
* Enhancement: Promo Box - Updated description control type to WYSIWYG
* Enhancement: Promo Box - Added option to show icon above or below content
* Enhancement: Interactive Circle - Added an option to use image as tab icon
* Fix: Image Accordion - Dynamic links support for URL field
* Fix: Image Scroll - Fixed JS error with scroll trigger

== 2.9.1 ==
Release date: March 26, 2025
* Enhancement: Advanced Charts - Added option to show chart title
* Enhancement: Advanced Charts - Added options to show title for X-axis and Y-axis
* Enhancement: Icon List - Added hover background option for list items
* Fixed: Carousel issue in various widgets

== 2.9.0 ==
Release date: March 5, 2025
* New: Charts widget
* Fixed: Instagram Feed - Lightbox arrows were not showing

== 2.8.4 ==
Release date: February 28, 2025
* Enhancement: Price Menu - Added 1 new style
* Enhancement: Image Accordion - Added option to apply link on button or item container
* Enhancement: Info Grid & Carousel - Added Icon Position option
* Enhancement: Info Table - Added Icon Position option
* Fixed: Logo Grid - Minor CSS glitch when link is added to logo
* Fixed: Display Conditions - Deprecated code in Request Parameter condition

== 2.8.3 ==
Release date: December 24, 2024
* Enhancement: Added has_widget_inner_wrapper to support “Optimized Markup” experiment
* Enhancement: Advanced Posts - Added conditional check to scripts and styles
* Enhancement: Instagram Feed - Updated Choose Arrow option
* Fixed: Pricing Table - Default background color
* Fixed: Issue with carousel widgets
* Fixed: Animation Gradient Background

== 2.8.2 ==
Release date: December 5, 2024
* Enhancement: Advanced Accordion - Added Vertical Alignment option for Toggle Icon
* Enhancement: Removed .elementor-widget-container class as part of the “Optimized Markup” experiment
* Enhancement: Enhanced security of widgets with saved templates feature
* Fixed: Image Comparison - jQuery Event Move lib was missing